--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,14 @@
   --color-fira-light: #f9fafb;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 button {
   cursor: pointer;
 }
